force-app/src/objects/ffirule__IntegrationRuleSourceTest__c.object
<CustomObject>
    <fields>
        <fullName>ffirule__ABooleanField__c</fullName>
        <defaultValue>false</defaultValue>
        <label>A Boolean Field</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ffirule__ADateField__c</fullName>
        <label>A Date Field</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ffirule__ALookupField__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>A Lookup Field</label>
        <referenceTo>ffirule__IntegrationRuleLookupTest__c</referenceTo>
        <relationshipLabel>Integration Rule Source Tests</relationshipLabel>
        <relationshipName>Integration_Rule_Source_Tests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ffirule__ANumberField__c</fullName>
        <label>A Number Field</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ffirule__ATextField__c</fullName>
        <label>A Text Field</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ffirule__AnotherNumberField__c</fullName>
        <label>Another Number Field</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ffirule__AnotherProcessFormula__c</fullName>
        <formula>IF(ffirule__ReadyToProcessLinesCount__c &gt; 0, 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Another Process Formula</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ffirule__AnotherTextField2__c</fullName>
        <label>Another Text Field</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ffirule__AnotherTextField__c</fullName>
        <label>Another Text Field</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ffirule__Currency__c</fullName>
        <label>Currency</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ffirule__DateTime__c</fullName>
        <label>Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ffirule__Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>ffirule__FormulaText__c</fullName>
        <formula>ffirule__ATextField__c  &amp;  ffirule__AnotherTextField__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Formula Text</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ffirule__IntegrationRuleSourceLinesCount__c</fullName>
        <label>ClickLink Source Lines Count</label>
        <summaryForeignKey>ffirule__IntegrationRuleSourceLineItemTest__c.ffirule__IntegrationRuleSourceTest__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ffirule__Number16__c</fullName>
        <label>Number 16,2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ffirule__Percent__c</fullName>
        <label>Percent</label>
        <precision>8</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ffirule__Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>ffirule__PicklistMulti__c</fullName>
        <label>Picklist Multi</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Multi1</fullName>
                </value>
                <value>
                    <fullName>Multi2</fullName>
                </value>
                <value>
                    <fullName>Multi3</fullName>
                </value>
                <value>
                    <fullName>Multi4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ffirule__Picklist__c</fullName>
        <label>Picklist</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Value1</fullName>
                </value>
                <value>
                    <fullName>Value2</fullName>
                </value>
                <value>
                    <fullName>Value3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ffirule__ProcessFormula__c</fullName>
        <formula>IF(CONTAINS(ffirule__ATextField__c, &apos;Skip&apos;), 0, 1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Process Formula</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ffirule__Process__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Process</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ffirule__Processed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Processed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ffirule__ReadyToProcessLinesCount__c</fullName>
        <label>Ready To Process Lines Count</label>
        <summaryFilterItems>
            <field>ffirule__IntegrationRuleSourceLineItemTest__c.ffirule__Process__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>ffirule__IntegrationRuleSourceLineItemTest__c.ffirule__Processed__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryForeignKey>ffirule__IntegrationRuleSourceLineItemTest__c.ffirule__IntegrationRuleSourceTest__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ffirule__TargetRecord__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Target Record</label>
        <referenceTo>ffirule__IntegrationRuleTargetTest__c</referenceTo>
        <relationshipLabel>Integration Rule Source Tests</relationshipLabel>
        <relationshipName>IntegrationRuleSourceTests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ffirule__TextAreaLong__c</fullName>
        <label>Text Area Long</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ffirule__TextAreaRich__c</fullName>
        <label>Text Area Rich</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>ffirule__TextArea__c</fullName>
        <label>Text Area</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ffirule__Time__c</fullName>
        <label>Time</label>
        <type>Time</type>
    </fields>
    <fields>
        <fullName>ffirule__TotalNumberFieldNegative__c</fullName>
        <formula>ffirule__TotalNumberField__c * -1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Number Field Negative</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ffirule__TotalNumberField__c</fullName>
        <label>Total Number Field</label>
        <summarizedField>ffirule__IntegrationRuleSourceLineItemTest__c.ffirule__ANumberField__c</summarizedField>
        <summaryForeignKey>ffirule__IntegrationRuleSourceLineItemTest__c.ffirule__IntegrationRuleSourceTest__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ffirule__URL__c</fullName>
        <label>URL</label>
        <type>Url</type>
    </fields>
    <label>ClickLink Source Test</label>
    <listViews>
        <fullName>ffirule__All</fullName>
        <columns>NAME</columns>
        <columns>ffirule__ATextField__c</columns>
        <columns>ffirule__ANumberField__c</columns>
        <columns>ffirule__ABooleanField__c</columns>
        <columns>ffirule__Processed__c</columns>
        <columns>ffirule__IntegrationRuleSourceLinesCount__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>ffirule__AsyncList</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ffirule__ANumberField__c</field>
            <operation>equals</operation>
            <value>3</value>
        </filters>
        <label>AsyncList</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>ffirule__FirstRecord</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ffirule__ANumberField__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>FirstRecord</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>ffirule__LastRecord</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ffirule__ANumberField__c</field>
            <operation>equals</operation>
            <value>10</value>
        </filters>
        <label>LastRecord</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>ffirule__NoRecords</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OBJECT_ID</field>
            <operation>equals</operation>
        </filters>
        <label>No Records</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>IRTSTS-{00000000}</displayFormat>
        <label>ClickLink Source Test Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ClickLink Source Tests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>